Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,38 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <form> 
+   <form action ="/newteam" method = "GET"
+   
+  <p>Team Name: <input type ="text"></p>
+  <p Coach: <input type="text"></p>
+  <p>Point Guard: <input type="text"></p>
+  <p>Shooting Guard: <input type="text"></p>
+  <p>Smalle Forward: <input type="text"></p>
+  <p>Power Forward: <input type="text"></p>
+  <p>Center: <input type="text"></p>
+  <input type="submit">
+</form>
+
+  
+   expect(page).to have_selector("form")
+<!--      (:name)-->
+<!--      <label for = "GET-coach"> Coach </label>-->
+<!--      expect(page).to have_field(:coach)-->
+<!--      expect(page).to have_field(:pg)-->
+<!--      expect(page).to have_field(:sg)-->
+<!--      expect(page).to have_field(:sf)-->
+<!--      expect(page).to have_field(:pf)-->
+<!--      expect(page).to have_field(:c)-->
+<!--      params = {-->
+<!--  :name => -->
+<!--  :coach => -->
+<!--  :pg =>-->
+<!--  :sg =>-->
+<!--  :pf =>-->
+<!--  :c => -->
+<!--}-->
+   
  </body>
 </html>
 
