--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,18 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+ <form action = "/team" method = "POST" >
+       
+       
+        do params = {
+  :name => "Brooklyn Nets"
+  :coach => "Ella Fitzgerald"
+  :pg => "Miles Davis"
+  :sg => "Dave Brubeck"
+  :pf => "John Coltrane"
+  :c => "Sonny Rollins"
+}
+ </form>
 
 
  </body>
