--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,8 @@
  <body>
    <form> 
    <form action ="/newteam" method = "GET"
-   
+ <form method="POST" action="/newteam">
+  <p>  
   <p>Team Name: <input type ="text"></p>
   <p Coach: <input type="text"></p>
   <p>Point Guard: <input type="text"></p>
